--- a/lcfserver-model/pom.xml
+++ b/lcfserver-model/pom.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>com.ceridwen.lcf</groupId>
         <artifactId>lcfserver</artifactId>
@@ -8,11 +9,13 @@
     </parent>
     <artifactId>lcfserver-model</artifactId>
     <packaging>jar</packaging>
+
     <dependencies>
         <dependency>
             <groupId>org.bic.ns.lcf</groupId>
             <artifactId>lcf-schema</artifactId>
-            <version>1.1.0</version>
+            <version>${lcf.schema.version}</version>
         </dependency>
     </dependencies>
+
 </project>
