--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ dependency-reduced-pom.xml
 .sonar_lock
 /lcfserver-frontend-servlet-webapp/src/main/webapp/META-INF/context.xml
 nb-configuration.xml
+/lcfserver-model/nbproject/
