--- a/lcfserver-codegen/pom.xml
+++ b/lcfserver-codegen/pom.xml
@@ -19,7 +19,7 @@
         <dependency>
             <groupId>org.antlr</groupId>
             <artifactId>stringtemplate</artifactId>
-            <version>4.0.2</version>
+            <version>${string.template.version}</version>
         </dependency>
     </dependencies>
 
