--- a/lcfserver-model/pom.xml
+++ b/lcfserver-model/pom.xml
@@ -45,6 +45,10 @@
             <version>${junit.jupiter.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.jcabi</groupId>
+            <artifactId>jcabi-manifests</artifactId>
+            <version>1.1</version>
+        </dependency>
     </dependencies>
-
 </project>
