--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,7 @@ The Library Communications Framework (LCF) is a set of library interoperability 
                             <manifestEntries>
                                 <Built-By>${user.name}</Built-By>
                                 <Build-Date>${maven.build.timestamp}</Build-Date>
+                                <BIC-LCF-Version>${lcf.schema.version}</BIC-LCF-Version>
                             </manifestEntries>
                         </archive>
                     </configuration>
@@ -168,6 +169,9 @@ The Library Communications Framework (LCF) is a set of library interoperability 
                     <version>9.4.18.v20190429</version>
                     <configuration>
                         <skip>true</skip>
+                        <webApp>
+                            <contextPath>/lcfserver</contextPath>
+                        </webApp>
                     </configuration>
                 </plugin>
                 <plugin>
