--- a/lcfserver-resources-memory/pom.xml
+++ b/lcfserver-resources-memory/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.ceridwen.lcf</groupId>
         <artifactId>lcfserver</artifactId>
-        <version>1.1.0-refactoring-20190606-SNAPSHOT</version>
+        <version>1.1.0-SNAPSHOT</version>
     </parent>  
     <artifactId>lcfserver-resources-memory</artifactId>
     <packaging>jar</packaging>
