--- a/lcfserver-model/pom.xml
+++ b/lcfserver-model/pom.xml
@@ -15,12 +15,6 @@
             <groupId>org.bic.ns.lcf</groupId>
             <artifactId>lcf-schema</artifactId>
             <version>${lcf.schema.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>com.sun.xml.bind</groupId>
-                    <artifactId>jaxb-impl</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <dependency>
             <groupId>commons-beanutils</groupId>
@@ -48,7 +42,8 @@
         <dependency>
             <groupId>com.jcabi</groupId>
             <artifactId>jcabi-manifests</artifactId>
-            <version>1.1</version>
+            <version>${jcabi.manifests.version}</version>
         </dependency>
     </dependencies>
+
 </project>
