--- a/lcfserver-model/pom.xml
+++ b/lcfserver-model/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.ceridwen.lcf</groupId>
         <artifactId>lcfserver</artifactId>
-        <version>1.1.0-password-update-SNAPSHOT</version>
+        <version>1.1.0-SNAPSHOT</version>
     </parent>
     <artifactId>lcfserver-model</artifactId>
     <packaging>jar</packaging>
