--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>com.ceridwen.lcf</groupId>
     <artifactId>lcfserver</artifactId>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.1.0-populate-data-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>lcfserver</name>
