--- a/lcfserver-resources/pom.xml
+++ b/lcfserver-resources/pom.xml
@@ -21,7 +21,7 @@ limitations under the License.
     <parent>
         <groupId>com.ceridwen.lcf</groupId>
         <artifactId>lcfserver</artifactId>
-        <version>1.1.0-imrpove-swagger-ui-SNAPSHOT</version>
+        <version>1.1.0-SNAPSHOT</version>
     </parent>  
     <artifactId>lcfserver-resources</artifactId>
     <packaging>jar</packaging>
