--- a/lcfserver-resources-memory/pom.xml
+++ b/lcfserver-resources-memory/pom.xml
@@ -21,7 +21,7 @@ limitations under the License.
     <parent>
         <groupId>com.ceridwen.lcf</groupId>
         <artifactId>lcfserver</artifactId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>1.1.0-rest-filters-SNAPSHOT</version>
     </parent>  
     <artifactId>lcfserver-resources-memory</artifactId>
     <packaging>jar</packaging>
