--- a/lcfserver-codegen/pom.xml
+++ b/lcfserver-codegen/pom.xml
@@ -21,7 +21,7 @@ limitations under the License.
     <parent>
         <groupId>com.ceridwen.lcf</groupId>
         <artifactId>lcfserver</artifactId>
-        <version>1.2.0-SNAPSHOT</version>
+        <version>1.2.0-entitytypes-refactor-SNAPSHOT</version>
     </parent>
     <artifactId>lcfserver-codegen</artifactId>
     <packaging>jar</packaging>
