--- a/pom.xml
+++ b/pom.xml
@@ -61,9 +61,15 @@ limitations under the License.
         <java.compiler.source>9</java.compiler.source>
         <java.compiler.target>9</java.compiler.target>
 
+
         <lcfserver.resourcemanager.groupid>${project.groupId}</lcfserver.resourcemanager.groupid>
         <lcfserver.resourcemanager.artifactid>lcfserver-resources-memory</lcfserver.resourcemanager.artifactid>
         <lcfserver.resourcemanager.version>${project.version}</lcfserver.resourcemanager.version>       
+
+        <maven.min.version>3.5</maven.min.version>
+        <java.compiler.source>9</java.compiler.source>
+        <java.compiler.target>9</java.compiler.target>
+
         <java.ee.version>7.0</java.ee.version>
         <openapi.swagger.version>2.1.0</openapi.swagger.version>      
         <jersey.container.version>2.29.1</jersey.container.version>
@@ -74,6 +80,9 @@ limitations under the License.
         <commons.beanutils.version>1.9.4</commons.beanutils.version>
         <ceridwen.util.version>1.7.1</ceridwen.util.version>
         <jeasy.random.version>4.1.0</jeasy.random.version>
+
+        <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <prerequisites>
