--- a/lcfserver-webservice/pom.xml
+++ b/lcfserver-webservice/pom.xml
@@ -21,7 +21,7 @@ limitations under the License.
     <parent>
         <groupId>com.ceridwen.lcf</groupId>
         <artifactId>lcfserver</artifactId>
-        <version>1.2.0-SNAPSHOT</version>
+        <version>1.2.0-openapi-suppress-unimplemented-api-SNAPSHOT</version>
     </parent>  
     <artifactId>lcfserver-webservice</artifactId>
     <packaging>jar</packaging>
