--- a/lcfserver-webservice/pom.xml
+++ b/lcfserver-webservice/pom.xml
@@ -55,9 +55,9 @@ limitations under the License.
         <dependency>
             <groupId>javax.ws.rs</groupId>
             <artifactId>javax.ws.rs-api</artifactId>
-            <version>2.1.1</version>
+            <version>${javax.ws-rs-api.version}</version>
             <scope>compile</scope>
-        </dependency>                        
+        </dependency>
     </dependencies>
 
     <build>
