--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@ limitations under the License.
 
     <groupId>com.ceridwen.lcf</groupId>
     <artifactId>lcfserver</artifactId>
-    <version>1.2.0-openapi-suppress-unimplemented-api-SNAPSHOT</version>
+    <version>1.2.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>lcfserver</name>
