--- a/lcfserver-webservice/pom.xml
+++ b/lcfserver-webservice/pom.xml
@@ -53,9 +53,9 @@ limitations under the License.
         </dependency>  
         
         <dependency>
-            <groupId>javax.ws.rs</groupId>
-            <artifactId>javax.ws.rs-api</artifactId>
-            <version>${javax.ws-rs-api.version}</version>
+            <groupId>jakarta.ws.rs</groupId>
+            <artifactId>jakarta.ws.rs-api</artifactId>
+            <version>${jakarta.ws-rs-api.version}</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
