--- a/pom.xml
+++ b/pom.xml
@@ -61,16 +61,21 @@ limitations under the License.
         <java.compiler.target>9</java.compiler.target>
 
         <java.ee.version>7.0</java.ee.version>
-        <javax.ws-rs-api.version>2.1.1</javax.ws-rs-api.version>
-        <openapi.swagger.version>2.1.0</openapi.swagger.version>      
-        <jersey.container.version>2.29.1</jersey.container.version>
-        <jersey.jaxb-runtime.version>2.4.0-b180830.0438</jersey.jaxb-runtime.version> 
-        <jackson.databind.version>2.10.1</jackson.databind.version>
+        <jakarta.ws-rs-api.version>2.1.6</jakarta.ws-rs-api.version>
+        <jakarta.jaxb-api.version>3.0.0-RC3</jakarta.jaxb-api.version>
+        <openapi.swagger.version>2.1.2</openapi.swagger.version>      
+        <jackson.fasterxml.version>2.11.0</jackson.fasterxml.version>
+        <glassfish.jersey.version>2.30.1</glassfish.jersey.version>
+        <glassfish.jaxb-runtime.version>3.0.0-M3</glassfish.jaxb-runtime.version> 
         <string.template.version>4.0.2</string.template.version>  
         <junit.jupiter.version>5.6.0-M1</junit.jupiter.version>
         <commons.beanutils.version>1.9.4</commons.beanutils.version>
         <ceridwen.util.version>1.7.1</ceridwen.util.version>
-        <jeasy.random.version>4.1.0</jeasy.random.version>
+        <jeasy.random.version>4.2.0</jeasy.random.version>
+
+        <plugin.gitflow.version>1.14.0</plugin.gitflow.version>
+        <plugin.jetty.version>10.0.0.alpha2</plugin.jetty.version>
+        <plugin.owasp.version>5.2.4</plugin.owasp.version>
 
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -101,18 +106,60 @@ limitations under the License.
                 <artifactId>lcf-schema</artifactId>
                 <version>${lcf.schema.version}</version>
                 <exclusions>
+                <!--
                     <exclusion>
                         <groupId>com.sun.xml.bind</groupId>
                         <artifactId>jaxb-impl</artifactId>
                     </exclusion>
+                    -->
+                    <exclusion>
+                        <groupId>javax.activation</groupId>
+                        <artifactId>javax.activation-api</artifactId>                        
+                    </exclusion>
                 </exclusions>
             </dependency>
+            <dependency>
+                <groupId>jakarta.xml.bind</groupId>
+                <artifactId>jakarta.xml.bind-api</artifactId>
+                <version>${jakarta.jaxb-api.version}</version>
+            </dependency>   
             <!-- Force versions to avoid OWASP Identified Vulnerabilities -->
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
-                <version>${jackson.databind.version}</version>
+                <version>${jackson.fasterxml.version}</version>
             </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-annotations</artifactId>
+                <version>${jackson.fasterxml.version}</version>
+            </dependency>   
+            <dependency>
+                <groupId>com.fasterxml.jackson.dataformat</groupId>
+                <artifactId>jackson-dataformat-yaml</artifactId>
+                <version>${jackson.fasterxml.version}</version>
+            </dependency>         
+            <dependency>
+                <groupId>com.fasterxml.jackson.datatype</groupId>
+                <artifactId>jackson-datatype-jsr310</artifactId>
+                <version>${jackson.fasterxml.version}</version>
+            </dependency>         
+            <dependency>
+                <groupId>com.fasterxml.jackson.jaxrs</groupId>
+                <artifactId>jackson-jaxrs-base</artifactId>
+                <version>${jackson.fasterxml.version}</version>
+            </dependency>         
+            <dependency>
+                <groupId>com.fasterxml.jackson.jaxrs</groupId>
+                <artifactId>jackson-jaxrs-json-provider</artifactId>
+                <version>${jackson.fasterxml.version}</version>
+            </dependency>         
+            <dependency>
+                <groupId>com.fasterxml.jackson.module</groupId>
+                <artifactId>jackson-module-jaxb-annotations</artifactId>
+                <version>${jackson.fasterxml.version}</version>
+            </dependency>         
+            
             <!--
                         <dependency>
                             <groupId>org.igniterealtime.smack</groupId>
@@ -260,7 +307,7 @@ limitations under the License.
                 <plugin>
                     <groupId>org.owasp</groupId>
                     <artifactId>dependency-check-maven</artifactId>
-                    <version>5.2.4</version>
+                    <version>${plugin.owasp.version}</version>
                     <executions>
                         <execution>
                             <goals>
@@ -272,7 +319,7 @@ limitations under the License.
                 <plugin>
                     <groupId>com.amashchenko.maven.plugin</groupId>
                     <artifactId>gitflow-maven-plugin</artifactId>
-                    <version>1.14.0</version>
+                    <version>${plugin.gitflow.version}</version>
                     <configuration>
                         <installProject>false</installProject>
                         <verbose>false</verbose>
@@ -295,7 +342,7 @@ limitations under the License.
                 <plugin>
                     <groupId>org.eclipse.jetty</groupId>
                     <artifactId>jetty-maven-plugin</artifactId>
-                    <version>9.4.25.v20191220</version>
+                    <version>${plugin.jetty.version}</version>
                     <configuration>
                         <skip>true</skip>
                         <webApp>
