--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@ limitations under the License.
 
     <groupId>com.ceridwen.lcf</groupId>
     <artifactId>lcfserver</artifactId>
-    <version>1.2.0-testframework-SNAPSHOT</version>
+    <version>lcf-${lcf.schema.version}_server-2.1-testframework</version>
     <packaging>pom</packaging>
 
     <name>lcfserver</name>
