--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@ limitations under the License.
 
     <groupId>com.ceridwen.lcf</groupId>
     <artifactId>lcfserver</artifactId>
-    <version>lcf-${lcf.schema.version}_server-2.1-testframework</version>
+    <version>lcf-1.2.0_server-2.1</version>
     <packaging>pom</packaging>
 
     <name>lcfserver</name>
